--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "node": "^19.3.0"
+    "next": "^13.1.1",
+    "node": "^19.3.0",
+    "uuid": "^9.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
