--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "node": "^19.3.0",
-    "uuid": "^9.0.0"
+    "node": "^19.3.0"
   },
   "name": "backend",
   "version": "1.0.0",
